updated tests nuget packets

--- a/Alicargo.BlackBox.Tests/app.config
+++ b/Alicargo.BlackBox.Tests/app.config
@@ -18,11 +18,8 @@
 		<add key="DefaultFrom" value="robot@alicargo.ru" />
 	</appSettings>
 	<connectionStrings>
-  <add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString"
-   connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
-  <add name="Alicargo.BlackBox.Tests.Properties.Settings.FilesConnectionString"
-   connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True"
-   providerName="" />
+  <add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+  <add name="Alicargo.BlackBox.Tests.Properties.Settings.FilesConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" providerName="" />
  </connectionStrings>
 	<userSettings>
 		<Alicargo.BlackBox.Tests.Properties.Settings>
@@ -47,11 +44,11 @@
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="4.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.1.1309.1617" newVersion="4.1.1309.1617" />
+				<bindingRedirect oldVersion="0.0.0.0-4.2.1312.1323" newVersion="4.2.1312.1323" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -59,7 +56,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-3.12.1.0" newVersion="3.12.1.0" />
+				<bindingRedirect oldVersion="0.0.0.0-3.16.1.0" newVersion="3.16.1.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
