--- a/Alicargo.DataAccess.BlackBox.Tests/App.config
+++ b/Alicargo.DataAccess.BlackBox.Tests/App.config
@@ -3,16 +3,14 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="Alicargo.DataAccess.BlackBox.Tests.Properties.Settings.MainConnectionString"
-      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
-    <add name="Alicargo.DataAccess.BlackBox.Tests.Properties.Settings.FilesConnectionString"
-      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
+    <add name="Alicargo.DataAccess.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+    <add name="Alicargo.DataAccess.BlackBox.Tests.Properties.Settings.FilesConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.1309.1617" newVersion="4.1.1309.1617" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1312.1323" newVersion="4.2.1312.1323" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -20,11 +18,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.12.1.0" newVersion="3.12.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.16.1.0" newVersion="3.16.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
