moved jquery files

--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -630,25 +630,25 @@
     <Content Include="Deploy\SqlSchemaCompare.scmp" />
     <None Include="Properties\PublishProfiles\Dev.pubxml" />
     <None Include="Properties\PublishProfiles\Release.pubxml" />
-    <None Include="Scripts\jquery-2.0.3.intellisense.js" />
+    <None Include="Scripts\jQuery\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\app\State\Edit.js" />
     <Content Include="Scripts\app\State\Grid.js" />
     <Content Include="Scripts\app\Template\Edit.js" />
     <Content Include="Scripts\app\Template\Grid.js" />
     <Content Include="Scripts\app\User\Grid.js" />
-    <Content Include="Scripts\globalize\cultures\globalize.culture.it.js" />
-    <Content Include="Scripts\globalize\cultures\globalize.culture.ru.js" />
-    <Content Include="Scripts\globalize\cultures\globalize.cultures.js" />
-    <Content Include="Scripts\globalize\globalize.js" />
-    <Content Include="Scripts\jquery-2.0.3.js" />
-    <Content Include="Scripts\jquery-2.0.3.min.js" />
-    <Content Include="Scripts\jquery-ui-1.10.3.js" />
-    <Content Include="Scripts\jquery-ui-1.10.3.min.js" />
-    <Content Include="Scripts\jquery.cookie.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\jQuery\globalize\cultures\globalize.culture.it.js" />
+    <Content Include="Scripts\jQuery\globalize\cultures\globalize.culture.ru.js" />
+    <Content Include="Scripts\jQuery\globalize\cultures\globalize.cultures.js" />
+    <Content Include="Scripts\jQuery\globalize\globalize.js" />
+    <Content Include="Scripts\jQuery\jquery-2.0.3.js" />
+    <Content Include="Scripts\jQuery\jquery-2.0.3.min.js" />
+    <Content Include="Scripts\jQuery\jquery-ui-1.10.3.js" />
+    <Content Include="Scripts\jQuery\jquery-ui-1.10.3.min.js" />
+    <Content Include="Scripts\jQuery\jquery.cookie.js" />
+    <Content Include="Scripts\jQuery\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jQuery\jquery.unobtrusive-ajax.min.js" />
+    <Content Include="Scripts\jQuery\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jQuery\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\kendo\2013.3.1119\cultures\kendo.culture.it.min.js" />
     <Content Include="Scripts\kendo\2013.3.1119\cultures\kendo.culture.ru.min.js" />
     <Content Include="Scripts\kendo\2013.3.1119\kendo.web.min.js" />
@@ -663,10 +663,10 @@
     <Content Include="Views\Client\Edit.cshtml" />
     <Content Include="Views\Client\EditorTemplates\ClientModel.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\TransitEditModel.cshtml" />
-    <Content Include="Scripts\jquery-2.0.3.min.map" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jQuery\jquery-2.0.3.min.map" />
+    <None Include="Scripts\jQuery\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jQuery\jquery.validate.js" />
+    <Content Include="Scripts\jQuery\jquery.validate.min.js" />
     <Content Include="Views\ApplicationList\Index.cshtml" />
     <Content Include="Views\Application\Create.cshtml" />
     <Content Include="Web.config">
