--- a/Alicargo.Contracts/Alicargo.Contracts.csproj
+++ b/Alicargo.Contracts/Alicargo.Contracts.csproj
@@ -49,34 +49,34 @@
       <Link>Properties\ProjectInfo.cs</Link>
     </Compile>
     <Compile Include="Contracts\AirWaybillAggregate.cs" />
-    <Compile Include="Contracts\ApplicationData.cs" />
-    <Compile Include="Contracts\ApplicationDetailsData.cs" />
+    <Compile Include="Contracts\Application\ApplicationData.cs" />
+    <Compile Include="Contracts\Application\ApplicationDetailsData.cs" />
     <Compile Include="Contracts\ApplicationEventData.cs" />
     <Compile Include="Contracts\ApplicationEventTemplateData.cs" />
-    <Compile Include="Contracts\ApplicationListItemData.cs" />
-    <Compile Include="Contracts\AuthenticationData.cs" />
-    <Compile Include="Contracts\BrokerData.cs" />
+    <Compile Include="Contracts\Application\ApplicationListItemData.cs" />
+    <Compile Include="Contracts\User\AuthenticationData.cs" />
+    <Compile Include="Contracts\User\BrokerData.cs" />
     <Compile Include="Contracts\CalculationData.cs" />
-    <Compile Include="Contracts\CarrierData.cs" />
+    <Compile Include="Contracts\User\CarrierData.cs" />
     <Compile Include="Contracts\CityData.cs" />
-    <Compile Include="Contracts\ClientData.cs" />
+    <Compile Include="Contracts\User\ClientData.cs" />
     <Compile Include="Contracts\EmailMessage.cs" />
     <Compile Include="Contracts\EmailMessageData.cs" />
     <Compile Include="Contracts\EmailTemplateLocalizationData.cs" />
     <Compile Include="Contracts\FileInfo.cs" />
     <Compile Include="Contracts\RecipientData.cs" />
     <Compile Include="Contracts\StateEmailTemplateData.cs" />
-    <Compile Include="Contracts\SenderData.cs" />
-    <Compile Include="Contracts\StateListItem.cs" />
-    <Compile Include="Contracts\StateRole.cs" />
+    <Compile Include="Contracts\User\SenderData.cs" />
+    <Compile Include="Contracts\State\StateListItem.cs" />
+    <Compile Include="Contracts\State\StateRole.cs" />
     <Compile Include="Contracts\VersionData.cs" />
     <Compile Include="Contracts\VersionedData.cs" />
     <Compile Include="Contracts\CountryData.cs" />
     <Compile Include="Contracts\FileHolder.cs" />
     <Compile Include="Contracts\AirWaybillData.cs" />
-    <Compile Include="Contracts\StateData.cs" />
+    <Compile Include="Contracts\State\StateData.cs" />
     <Compile Include="Contracts\TransitData.cs" />
-    <Compile Include="Contracts\UserData.cs" />
+    <Compile Include="Contracts\User\UserData.cs" />
     <Compile Include="Enums\ApplicationEventState.cs" />
     <Compile Include="Enums\ApplicationEventType.cs" />
     <Compile Include="Enums\ApplicationFileType.cs" />
@@ -92,6 +92,7 @@
     <Compile Include="Exceptions\EntityNotFoundException.cs" />
     <Compile Include="Exceptions\InvalidLogicException.cs" />
     <Compile Include="Exceptions\UnexpectedStateException.cs" />
+    <Compile Include="Helpers\EmailsHelper.cs" />
     <Compile Include="Helpers\IPasswordConverter.cs" />
     <Compile Include="Helpers\ISerializer.cs" />
     <Compile Include="Helpers\Order.cs" />
