--- a/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
+++ b/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
@@ -95,13 +95,13 @@
     <Compile Include="Helpers\ApplicationRepositoryOrdererTests.cs" />
     <Compile Include="Helpers\DbTestContext.cs" />
     <Compile Include="Repositories\EmailMessageRepositoryTests.cs" />
-    <Compile Include="Repositories\SenderRepositoryTests.cs" />
+    <Compile Include="Repositories\User\SenderRepositoryTests.cs" />
     <Compile Include="Repositories\StateSettingsRepositoryTests.cs" />
     <Compile Include="Repositories\StateRepositoryTests.cs" />
     <Compile Include="Repositories\AwbRepositoryTests.cs" />
-    <Compile Include="Repositories\BrockerRepositoryTests.cs" />
-    <Compile Include="Repositories\CarrierRepositoryTests.cs" />
-    <Compile Include="Repositories\ClientRepositoryTests.cs" />
+    <Compile Include="Repositories\User\BrockerRepositoryTests.cs" />
+    <Compile Include="Repositories\User\CarrierRepositoryTests.cs" />
+    <Compile Include="Repositories\User\ClientRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ApplicationRepositoryTests.cs" />
     <Compile Include="Repositories\TransitRepositoryTests.TransitRepository.cs" />
@@ -110,7 +110,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Repositories\AuthenticationRepositoryTests.cs" />
+    <Compile Include="Repositories\User\AdminRepositoryTests.cs" />
     <Compile Include="Repositories\CalculationRepositoryTests.cs" />
     <Compile Include="Repositories\ApplicationEventRepositoryTests.cs" />
     <Compile Include="Repositories\EmailTemplateRepositoryTests.cs" />
