updated events system

--- a/Alicargo.Contracts/Alicargo.Contracts.csproj
+++ b/Alicargo.Contracts/Alicargo.Contracts.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Contracts\EventData.cs" />
     <Compile Include="Contracts\ApplicationEventTemplateData.cs" />
     <Compile Include="Contracts\Application\ApplicationListItemData.cs" />
+    <Compile Include="Contracts\EventDataForApplication.cs" />
     <Compile Include="Contracts\User\ClientBalanceHistoryItem.cs" />
     <Compile Include="Contracts\User\PasswordData.cs" />
     <Compile Include="Contracts\User\BrokerData.cs" />
